# scsc-game

./: CMakeLists.txt  README.MD
include/: Math.h  Object.h  Physics.h  Platform.h  Player.h  Scenery.h
src/: Math.cpp  Object.cpp  Physics.cpp  Platform.cpp  Player.cpp  Scenery.cpp  main.cpp
